Y_F2_conexp2fdsWithDuplicateColumns/files/gen/DDLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 DDL.g 2011-08-28 18:52:05

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class DDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LOG_CONJ", "ID", "NUMBER", "CVALUE", "COMPARATOR", "NON_SECOND_DATETIME_FIELD", "SQUOTE", "WS", "ML_COMMENT", "OL_COMMENT", "'CREATE'", "'REPLACE'", "'TABLE'", "'('", "','", "')'", "'LOGGING'", "'NOCOMPRESS'", "'NOCACHE'", "'NOPARALLEL'", "'MONITORING'", "';'", "'CONSTRAINT'", "'NULL'", "'NOT NULL'", "'DEFAULT'", "'ALTER TABLE'", "'ADD CONSTRAINT'", "'FOREIGN KEY'", "'REFERENCES'", "'\\.'", "'ON'", "'DELETE'", "'UPDATE'", "'CASCADE'", "'DISABLE'", "'RESTRICT'", "'NO ACTION'", "'SET NULL'", "'CHECK'", "'PRIMARY KEY'", "'UNIQUE'", "'DATABASE'", "'SCHEMA'", "'IF NOT EXISTS'", "'CHARACTER'", "'SET'", "'COLLATE'", "'IN'", "'CHAR'", "'CHARACTER VARYING'", "'CHAR VARYING'", "'VARCHAR'", "'NATIONAL CHARACTER'", "'NATIONAL CHAR'", "'NCHAR'", "'NATIONAL CHARACTER VARYING'", "'NATIONAL CHAR VARYING'", "'NCHAR VARYING'", "'BIT'", "'BIT VARYING'", "'NUMERIC'", "'DECIMAL'", "'DEC'", "'INTEGER'", "'INT'", "'SMALLINT'", "'FLOAT'", "'REAL'", "'DOUBLE PRECISION'", "'DATE'", "'TIME'", "'WITH TIME ZONE'", "'TIMESTAMP'", "'INTERVAL'", "'TO'", "'SECOND'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__29=29;
    public static final int T__65=65;
    public static final int T__28=28;
    public static final int T__62=62;
    public static final int T__27=27;
    public static final int T__63=63;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int ID=5;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int ML_COMMENT=12;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int COMPARATOR=8;
    public static final int T__16=16;
    public static final int T__51=51;
    public static final int T__15=15;
    public static final int T__52=52;
    public static final int T__18=18;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__14=14;
    public static final int T__59=59;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__80=80;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=6;
    public static final int OL_COMMENT=13;
    public static final int LOG_CONJ=4;
    public static final int SQUOTE=10;
    public static final int CVALUE=7;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=11;
    public static final int NON_SECOND_DATETIME_FIELD=9;
    public static final int T__71=71;
    public static final int T__33=33;
    public static final int T__72=72;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__70=70;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;

    // delegates
    // delegators


        public DDLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DDLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("DDLParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return DDLParser.tokenNames; }
    public String getGrammarFileName() { return "DDL.g"; }


    public static class data_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "data_definition"
    // DDL.g:19:1: data_definition returns [Node returnNode] : (data_definition_statementGen+= data_definition_statement )* ;
    public final DDLParser.data_definition_return data_definition() throws RecognitionException {
        DDLParser.data_definition_return retval = new DDLParser.data_definition_return();
        retval.start = input.LT(1);

        List list_data_definition_statementGen=null;
        RuleReturnScope data_definition_statementGen = null;
        try {
            // DDL.g:20:1: ( (data_definition_statementGen+= data_definition_statement )* )
            // DDL.g:20:4: (data_definition_statementGen+= data_definition_statement )*
            {
            // DDL.g:20:4: (data_definition_statementGen+= data_definition_statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==14||LA1_0==30) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // DDL.g:20:6: data_definition_statementGen+= data_definition_statement
            	    {
            	    pushFollow(FOLLOW_data_definition_statement_in_data_definition49);
            	    data_definition_statementGen=data_definition_statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_data_definition_statementGen==null) list_data_definition_statementGen=new ArrayList();
            	    list_data_definition_statementGen.add(data_definition_statementGen);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node data_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		data_definitionReturnNode.setKind("data_definition");
              	    // Create a CST Node
              		if(list_data_definition_statementGen != null) {
              	        for(Iterator it = list_data_definition_statementGen.iterator(); it.hasNext(); )  { 
              	            DDLParser.data_definition_statement_return r = (DDLParser.data_definition_statement_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("data_definition_statement");
              	            	data_definitionReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = data_definitionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data_definition"

    public static class data_definition_statement_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "data_definition_statement"
    // DDL.g:40:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | alter_tableGen+= alter_table );
    public final DDLParser.data_definition_statement_return data_definition_statement() throws RecognitionException {
        DDLParser.data_definition_statement_return retval = new DDLParser.data_definition_statement_return();
        retval.start = input.LT(1);

        List list_databaseGen=null;
        List list_tableGen=null;
        List list_alter_tableGen=null;
        RuleReturnScope databaseGen = null;
        RuleReturnScope tableGen = null;
        RuleReturnScope alter_tableGen = null;
        try {
            // DDL.g:41:1: (databaseGen+= database | tableGen+= table | alter_tableGen+= alter_table )
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==14) ) {
                int LA2_1 = input.LA(2);

                if ( ((LA2_1>=46 && LA2_1<=47)) ) {
                    alt2=1;
                }
                else if ( (LA2_1==LOG_CONJ||LA2_1==16) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA2_0==30) ) {
                alt2=3;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // DDL.g:41:5: databaseGen+= database
                    {
                    pushFollow(FOLLOW_database_in_data_definition_statement75);
                    databaseGen=database();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_databaseGen==null) list_databaseGen=new ArrayList();
                    list_databaseGen.add(databaseGen);

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_databaseGen != null) {
                      	        for(Iterator it = list_databaseGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.database_return r = (DDLParser.database_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("database");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 2 :
                    // DDL.g:59:5: tableGen+= table
                    {
                    pushFollow(FOLLOW_table_in_data_definition_statement87);
                    tableGen=table();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_tableGen==null) list_tableGen=new ArrayList();
                    list_tableGen.add(tableGen);

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_tableGen != null) {
                      	        for(Iterator it = list_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.table_return r = (DDLParser.table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 3 :
                    // DDL.g:77:5: alter_tableGen+= alter_table
                    {
                    pushFollow(FOLLOW_alter_table_in_data_definition_statement99);
                    alter_tableGen=alter_table();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_alter_tableGen==null) list_alter_tableGen=new ArrayList();
                    list_alter_tableGen.add(alter_tableGen);

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_alter_tableGen != null) {
                      	        for(Iterator it = list_alter_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.alter_table_return r = (DDLParser.alter_table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("alter_table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data_definition_statement"

    public static class table_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "table"
    // DDL.g:97:1: table returns [Node returnNode] : TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (checGen+= chec (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (ckGen+= ck (TK_7= ',' )? )* (fkGen+= fk (TK_8= ',' )? )* TK_9= ')' (TK_10= 'LOGGING' )? (TK_11= 'NOCOMPRESS' )? (TK_12= 'NOCACHE' )? (TK_13= 'NOPARALLEL' )? (TK_14= 'MONITORING' )? TK_15= ';' ;
    public final DDLParser.table_return table() throws RecognitionException {
        DDLParser.table_return retval = new DDLParser.table_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token LOG_CONJGen=null;
        Token TK_1=null;
        Token TK_2=null;
        Token IDGen=null;
        Token TK_3=null;
        Token TK_4=null;
        Token TK_5=null;
        Token TK_6=null;
        Token TK_7=null;
        Token TK_8=null;
        Token TK_9=null;
        Token TK_10=null;
        Token TK_11=null;
        Token TK_12=null;
        Token TK_13=null;
        Token TK_14=null;
        Token TK_15=null;
        List list_columnGen=null;
        List list_checGen=null;
        List list_pkGen=null;
        List list_ckGen=null;
        List list_fkGen=null;
        RuleReturnScope columnGen = null;
        RuleReturnScope checGen = null;
        RuleReturnScope pkGen = null;
        RuleReturnScope ckGen = null;
        RuleReturnScope fkGen = null;
        try {
            // DDL.g:98:1: (TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (checGen+= chec (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (ckGen+= ck (TK_7= ',' )? )* (fkGen+= fk (TK_8= ',' )? )* TK_9= ')' (TK_10= 'LOGGING' )? (TK_11= 'NOCOMPRESS' )? (TK_12= 'NOCACHE' )? (TK_13= 'NOPARALLEL' )? (TK_14= 'MONITORING' )? TK_15= ';' )
            // DDL.g:98:4: TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (checGen+= chec (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (ckGen+= ck (TK_7= ',' )? )* (fkGen+= fk (TK_8= ',' )? )* TK_9= ')' (TK_10= 'LOGGING' )? (TK_11= 'NOCOMPRESS' )? (TK_12= 'NOCACHE' )? (TK_13= 'NOPARALLEL' )? (TK_14= 'MONITORING' )? TK_15= ';'
            {
            TK_0=(Token)match(input,14,FOLLOW_14_in_table121); if (state.failed) return retval;
            // DDL.g:98:18: (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==LOG_CONJ) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // DDL.g:98:20: LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE'
                    {
                    LOG_CONJGen=(Token)match(input,LOG_CONJ,FOLLOW_LOG_CONJ_in_table127); if (state.failed) return retval;
                    TK_1=(Token)match(input,15,FOLLOW_15_in_table132); if (state.failed) return retval;

                    }
                    break;

            }

            TK_2=(Token)match(input,16,FOLLOW_16_in_table139); if (state.failed) return retval;
            IDGen=(Token)match(input,ID,FOLLOW_ID_in_table144); if (state.failed) return retval;
            TK_3=(Token)match(input,17,FOLLOW_17_in_table149); if (state.failed) return retval;
            // DDL.g:98:93: (columnGen+= column )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // DDL.g:98:95: columnGen+= column
            	    {
            	    pushFollow(FOLLOW_column_in_table155);
            	    columnGen=column();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_columnGen==null) list_columnGen=new ArrayList();
            	    list_columnGen.add(columnGen);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // DDL.g:98:115: (TK_4= ',' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==18) ) {
                int LA5_1 = input.LA(2);

                if ( (synpred6_DDL()) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // DDL.g:98:117: TK_4= ','
                    {
                    TK_4=(Token)match(input,18,FOLLOW_18_in_table163); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:98:128: (checGen+= chec (TK_5= ',' )? )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==26) ) {
                    int LA7_1 = input.LA(2);

                    if ( (LA7_1==ID) ) {
                        int LA7_3 = input.LA(3);

                        if ( (LA7_3==43) ) {
                            alt7=1;
                        }


                    }


                }


                switch (alt7) {
            	case 1 :
            	    // DDL.g:98:130: checGen+= chec (TK_5= ',' )?
            	    {
            	    pushFollow(FOLLOW_chec_in_table171);
            	    checGen=chec();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_checGen==null) list_checGen=new ArrayList();
            	    list_checGen.add(checGen);

            	    // DDL.g:98:144: (TK_5= ',' )?
            	    int alt6=2;
            	    int LA6_0 = input.LA(1);

            	    if ( (LA6_0==18) ) {
            	        int LA6_1 = input.LA(2);

            	        if ( (synpred7_DDL()) ) {
            	            alt6=1;
            	        }
            	    }
            	    switch (alt6) {
            	        case 1 :
            	            // DDL.g:98:146: TK_5= ','
            	            {
            	            TK_5=(Token)match(input,18,FOLLOW_18_in_table177); if (state.failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            // DDL.g:98:159: (pkGen+= pk )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==26) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==ID) ) {
                    int LA8_3 = input.LA(3);

                    if ( (LA8_3==44) ) {
                        alt8=1;
                    }
                }
            }
            switch (alt8) {
                case 1 :
                    // DDL.g:98:161: pkGen+= pk
                    {
                    pushFollow(FOLLOW_pk_in_table187);
                    pkGen=pk();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_pkGen==null) list_pkGen=new ArrayList();
                    list_pkGen.add(pkGen);


                    }
                    break;

            }

            // DDL.g:98:173: (TK_6= ',' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==18) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // DDL.g:98:175: TK_6= ','
                    {
                    TK_6=(Token)match(input,18,FOLLOW_18_in_table195); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:98:186: (ckGen+= ck (TK_7= ',' )? )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==26) ) {
                    int LA11_1 = input.LA(2);

                    if ( (LA11_1==ID) ) {
                        int LA11_3 = input.LA(3);

                        if ( (LA11_3==45) ) {
                            alt11=1;
                        }


                    }


                }


                switch (alt11) {
            	case 1 :
            	    // DDL.g:98:188: ckGen+= ck (TK_7= ',' )?
            	    {
            	    pushFollow(FOLLOW_ck_in_table203);
            	    ckGen=ck();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_ckGen==null) list_ckGen=new ArrayList();
            	    list_ckGen.add(ckGen);

            	    // DDL.g:98:198: (TK_7= ',' )?
            	    int alt10=2;
            	    int LA10_0 = input.LA(1);

            	    if ( (LA10_0==18) ) {
            	        alt10=1;
            	    }
            	    switch (alt10) {
            	        case 1 :
            	            // DDL.g:98:200: TK_7= ','
            	            {
            	            TK_7=(Token)match(input,18,FOLLOW_18_in_table209); if (state.failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            // DDL.g:98:213: (fkGen+= fk (TK_8= ',' )? )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==26) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // DDL.g:98:215: fkGen+= fk (TK_8= ',' )?
            	    {
            	    pushFollow(FOLLOW_fk_in_table219);
            	    fkGen=fk();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_fkGen==null) list_fkGen=new ArrayList();
            	    list_fkGen.add(fkGen);

            	    // DDL.g:98:225: (TK_8= ',' )?
            	    int alt12=2;
            	    int LA12_0 = input.LA(1);

            	    if ( (LA12_0==18) ) {
            	        alt12=1;
            	    }
            	    switch (alt12) {
            	        case 1 :
            	            // DDL.g:98:227: TK_8= ','
            	            {
            	            TK_8=(Token)match(input,18,FOLLOW_18_in_table225); if (state.failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);

            TK_9=(Token)match(input,19,FOLLOW_19_in_table234); if (state.failed) return retval;
            // DDL.g:98:250: (TK_10= 'LOGGING' )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==20) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // DDL.g:98:252: TK_10= 'LOGGING'
                    {
                    TK_10=(Token)match(input,20,FOLLOW_20_in_table240); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:98:270: (TK_11= 'NOCOMPRESS' )?
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==21) ) {
                alt15=1;
            }
            switch (alt15) {
                case 1 :
                    // DDL.g:98:272: TK_11= 'NOCOMPRESS'
                    {
                    TK_11=(Token)match(input,21,FOLLOW_21_in_table248); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:98:293: (TK_12= 'NOCACHE' )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==22) ) {
                alt16=1;
            }
            switch (alt16) {
                case 1 :
                    // DDL.g:98:295: TK_12= 'NOCACHE'
                    {
                    TK_12=(Token)match(input,22,FOLLOW_22_in_table256); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:98:313: (TK_13= 'NOPARALLEL' )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==23) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // DDL.g:98:315: TK_13= 'NOPARALLEL'
                    {
                    TK_13=(Token)match(input,23,FOLLOW_23_in_table264); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:98:336: (TK_14= 'MONITORING' )?
            int alt18=2;
            int LA18_0 = input.LA(1);

            if ( (LA18_0==24) ) {
                alt18=1;
            }
            switch (alt18) {
                case 1 :
                    // DDL.g:98:338: TK_14= 'MONITORING'
                    {
                    TK_14=(Token)match(input,24,FOLLOW_24_in_table272); if (state.failed) return retval;

                    }
                    break;

            }

